--- a/index.html
+++ b/index.html
@@ -13,50 +13,52 @@
 <body>
 
     <!-- Navigation bar -->
-    <nav>
-        <a href="#">My Portfolio</a>
-        <button type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a href="#" class="navbar-brand">My Portfolio</a>
+        <button 
+        class="navbar-toggler"
+        type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false" aria-label="Toggle navigation">
-            <span></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
-        <div>
-            <ul>
-                <li>
-                    <a href="#">Home</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li calss="nav-item">
+                    <a href="#" class="nav-link">Home</a>
                 </li>
-                <li>
-                    <a href="#">About</a>
+                <li calss="nav-item">
+                    <a href="#" class="nav-link">About</a>
                 </li>
-                <li>
-                    <a href="#">Portfolio</a>
+                <li calss="nav-item">
+                    <a href="#" class="nav-link">Portfolio</a>
                 </li>
-                <li>
-                    <a href="#">Contact</a>
+                <li calss="nav-item">
+                    <a href="#" class="nav-link">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
 
     <!-- Jumbotron -->
-    <div>
-        <h1>Hello, world!</h1>
-        <p>This is my portfolio website.</p>
-        <hr>
+    <div class="jumbotron">
+        <h1 class="display-4">Hello, world!</h1>
+        <p class="lead">This is my portfolio website.</p>
+        <hr class="mt-4 mb-4" />
         <p>It is still a work in progress, but feel free to look around!</p>
-        <a href="#" role="button">Learn more</a>
+        <a href="#" role="button" class="btn btn-primary btn-lg">Learn more</a>
     </div>
 
     <!-- About section -->
-    <div>
-        <div>
-            <div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
                 <h2>About Me</h2>
                 <p>My name is John Doe and I am a web developer based in New York City. I have experience in HTML, CSS,
                     JavaScript, and other web technologies.</p>
                 <p>When I'm not coding, I enjoy hiking and playing guitar.</p>
             </div>
-            <div>
-                <img src="https://via.placeholder.com/400x400" alt="Profile Picture">
+            <div class="col-md-6">
+                <img src="https://via.placeholder.com/400x400" alt="Profile Picture" class="img-fluid">
             </div>
         </div>
     </div>
@@ -89,12 +91,12 @@
     </div>
     -->
     <!-- Portfolio section -->
-    <div>
+    <div class="container">
         <h2>My Portfolio</h2>
-        <div>
-            <div>
-                <div>
-                    <img src="https://via.placeholder.com/400x250" alt="...">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/400x250" alt="..." class="card-img-top">
                     <div>
                         <h5>Project 1</h5>
                         <p>This is a description of Project 1.</p>
@@ -102,9 +104,9 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <div>
-                    <img src="https://via.placeholder.com/400x250" alt="...">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/400x250" alt="..." class="card-img-top">
                     <div>
                         <h5>Project 2</h5>
                         <p>This is a description of Project 2.</p>
@@ -112,12 +114,12 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <div>
-                    <img src="https://via.placeholder.com/400x250" alt="...">
-                    <div>
-                        <h5>Project 3</h5>
-                        <p>This is a description of Project 3.</p>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/400x250" alt="..." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 3</h5>
+                        <p class="card-text">This is a description of Project 3.</p>
                         <a href="#">Learn more</a>
                     </div>
                 </div>
