--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Project 3</h5>
                         <p class="card-text">This is a description of Project 3.</p>
-                        <a href="#">Learn more</a>
+                        <a href="#" class="btn btn-primary">Learn more</a>
                     </div>
                 </div>
             </div>
